Delete previous gh-pages branch, continue research on possible additions, wrap up survey on submission page, make sure linkedin is meeting requirements.

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,3 +91,6 @@ h1 {
   bottom: 0px;
 }
 
+p {
+  font-weight: bolder;
+}
